RESOLVED FIXED277086
flydenver.com: Image layouts wrong
https://bugs.webkit.org/show_bug.cgi?id=277086
Summary flydenver.com: Image layouts wrong
Sammy Gill
Reported 2024-07-25 11:32:15 PDT
On https://www.flydenver.com/airlines/, in Safari, you can see that the images of the airline logos do not match up with their row in the table. Some of them are overflowing between the rows. This works correctly in Firefox 115.0.1. It’s a little bad in DuckDuckGo 1.62.1 (74), but not as bad as in Safari.
Attachments
Sammy Gill
Comment 1 2024-07-25 11:32:55 PDT
Sammy Gill
Comment 2 2024-07-25 11:45:27 PDT
Sammy Gill
Comment 3 2024-07-25 12:03:06 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/47294
EWS
Comment 4 2024-07-25 17:02:41 PDT
Committed 281378@main (7442fff8d874): <https://commits.webkit.org/281378@main> Reviewed commits have been landed. Closing PR #31235 and removing active labels.
EWS
Comment 5 2024-07-26 13:56:29 PDT
Committed 280938.135@safari-7619-branch (4f7ca971fc77): <https://commits.webkit.org/280938.135@safari-7619-branch> Reviewed commits have been landed. Closing PR #1500 and removing active labels.
Sammy Gill
Comment 6 2024-07-26 14:46:48 PDT
Sammy Gill
Comment 7 2024-07-26 15:29:26 PDT
Should not have been reopened. That PR is associated with a different issue and I just had this one cherry picked on my local branch
Note You need to log in before you can comment on or make changes to this bug.