[Grid][Replaced] flydenver.com: Images of airlines logos have incorrect sizes. https://bugs.webkit.org/show_bug.cgi?id=277086 rdar://132105152

Reviewed by Alan Baradlay.

A grid item's containing block is defined by its grid area. Once the
grid track sizing algorithm is done the size of this area becomes
definite and grid expresses this by setting the overriding containing
block dimensions of the grid item.

So in computeReplacedLogicalHeightUsing we should check to see if these
values are set for grid items and use them to resolve percent or
calculated logical heights.

Otherwise, we would would end up falling back to some logic that walks
up the containing block chain and could end up using the intrinsic
logical height of the image in certain scenarios which does not seem
correct for grid items.

* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-in-table-cell-with-img-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-in-table-cell-with-img.html: Added.
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::computeReplacedLogicalHeightUsing const):

Canonical link: https://commits.webkit.org/281378@main